# newline

./: .gitignore  .treeignore  CMakeLists.txt  README.md  eink_server.py  newline.ino  sdkconfig  secret.example.h
main/: CMakeLists.txt  main.c
main/assets/fonts/azeret41/: azeret_41.c  azeret_41.h
main/assets/fonts/sono_21/: sono_21.c  sono_21.h
main/assets/fonts/sono_25/: sono_25.c  sono_25.h
main/src/: app_config.h  display.c  display.h  fetcher.c  fetcher.h  payload_store.c  payload_store.h  webserver.c  webserver.h  wifi_manager.c  wifi_manager.h
